--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>   
+    <title>Citrusfélék</title>   
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 
 <body>
@@ -25,6 +26,7 @@
             <a class="nav-link" href="index.html">Főoldal <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="index.html#leggyakoribb">Leggyakoribb citrusfélék</a>
             <a class="nav-link" href="index.html#kulonleges">Különleges citrusfélék</a>           
+            <a class="nav-link" href="https://hu.wikipedia.org/wiki/Citrusform%C3%A1k" target="_blank">„További információ”</a>           
           </div>
         </div>
       </nav>
@@ -46,27 +48,27 @@
             <div class="col-12">
                 <h2 id="leggyakoribb">Leggyakoribb citrusféle gyümölcsök</h2>
             </div>
-            <div class="col-sm-6 col-lg-6">
+            <div class="col-sm-6 col-lg-4">
                 <img src="img/narancs.jpg" alt="Narancs">
                 <h3>Narancs</h3>
                 <p>A narancs vagy édes narancs (Citrus sinensis), népies neve auranci, oránzs déligyümölcs a citrusformák alcsaládjából. Nem azonos a keserű naranccsal (Citrus × aurantium), ami a pomelo (Citrus maxima) és a mandarin (Citrus reticulata) hibridje.</p>
             </div>
-           <div class="col-sm-6 col-lg-6">
+           <div class="col-sm-6 col-lg-4">
                <img src="img/lime2.jpg" alt="Lime">
                <h3>Lime</h3>
                <p>A lime (ejtsd: lájm), savanyú citrom vagy zöldcitrom (Citrus aurantiifolia) ázsiai eredetű, a rutafélék (Rutaceae) családjába tartozó citrusféle. A növényfajt és termését egyaránt így nevezik. A lime gyümölcsöt íze miatt gyakran a citromhoz hasonlítják, de annál savanyúbb, jellegzetesebb, mérete kisebb és színe jellemzően zöld.</p>
            </div>
-           <div class="col-sm-6 col-lg-6">
+           <div class="col-sm-6 col-lg-4">
                <img src="img/grapefruit.jpg" alt="Grapefruit">
                <h3>Grépfrút</h3>
                <p>A grépfrút (Citrus x paradisi), angolos írásmód szerint grapefruit, más néven citrancs a citrusformák legfiatalabb tagja. Az 1750-es években fedezték fel, valószínűleg Barbadoson. A pomelo (Citrus grandis) és a narancs (Citrus sinensis) hibridjeként alakult ki, bár az elsőhöz közelebb áll. </p>
            </div>
-           <div class="col-sm-6 col-lg-6">
+           <div class="col-sm-6 col-lg-4">
                 <img src="img/citrom.jpg" alt="Citrom">
                 <h3>Citrom</h3>
                 <p>A citrom, más néven közönséges citrom, valódi citrom vagy európai citrom[1] (Citrus × limon) a citrusformák (Citroideae) alcsaládjába tartozó Citrus nemzetség egyik növényfaja. Termése, melyet szintén citromnak hívnak, déligyümölcs és egyben fűszer is.</p>
            </div>                    
-            <div class="col-sm-6 col-lg-6">
+            <div class="col-sm-6 col-lg-4">
                 <img src="img/pomelo.jpg" alt="Pomelo">
                 <h3>Pomelo</h3>
                 <p>A pomelo vagy pummelo (avagy középső gyümölcs) (latin: Citrus grandis, binomiális név: Citrus maxima) a rutafélék családjába tartozó, valószínűleg Malajziában és Polinéziában őshonos déligyümölcs. </p>
