--- a/mandarin.html
+++ b/mandarin.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 
-<head>    
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Citrusfélék</title>   
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">   
 </head>
 
 <body>
@@ -23,7 +27,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="index.html">Főoldal</a>
                 <a class="nav-link" href="index.html#leggyakoribb">Leggyakoribb citrusfélék</a>
-                <a class="nav-link" href="index.html#kulonleges">Különleges citrusfélék</a>                
+                <a class="nav-link" href="index.html#kulonleges">Különleges citrusfélék</a><a class="nav-link" href="https://hu.wikipedia.org/wiki/Citrusform%C3%A1k" target="_blank">„További információ”</a>           
             </div>
         </div>
     </nav>
@@ -39,7 +43,7 @@
 
             </div>
             <div class="col-md-5">
-                <img src="img/mandarin2.jpg" class="w-75 mt-3 mx-auto d-block" alt="Mandarin">
+                <img src="img/mandarin2.jpg" class="w-75 mt-3 mx-auto d-block img-thumbnail" alt="Mandarin">
             </div>
             <div class="col-12 col-xl-4">
                 <h2>Megjelenés</h2>
