--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
                 <img class="img-thumbnail" src="img/citrom.jpg" alt="Citrom">
                 <h3>Citrom</h3>
                 <p>A citrom, más néven közönséges citrom, valódi citrom vagy európai citrom[1] (Citrus × limon) a citrusformák (Citroideae) alcsaládjába tartozó Citrus nemzetség egyik növényfaja. Termése, melyet szintén citromnak hívnak, déligyümölcs és egyben fűszer is.</p>
-           </div>                    
+           </div>  
+           <div class="col-sm-6 col-lg-4">
+            <img class="img-thumbnail" src="img/mandarin.jpg" alt="Mandarin">
+            <h3>Mandarin</h3>
+            <p>A mandarin (Citrus reticulata) a citrusformák közé tartozó déligyümölcs. Dél-Kínából származik, Európába csak a 19. században kezdték beszállítani.</p>
+                <div>
+                    <button class="btn btn-outline-success">
+                        <a href="mandarin.html">Részletesen a mandarinról</a>
+                    </button>
+                </div>
+            </div>                    
             <div class="col-sm-6 col-lg-4">
                 <img class="img-thumbnail" src="img/pomelo.jpg" alt="Pomelo">
                 <h3>Pomelo</h3>
