--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
            <div class="col-sm-6 col-lg-4">
             <img class="img-thumbnail" src="img/mandarin.jpg" alt="Mandarin">
             <h3>Mandarin</h3>
-            <p>A mandarin (Citrus reticulata) a citrusformák közé tartozó déligyümölcs. Dél-Kínából származik, Európába csak a 19. században kezdték beszállítani.</p>
+            <p>A mandarin (<i>Citrus reticulata</i>) a citrusformák közé tartozó déligyümölcs. <b>Dél-Kínából</b> származik, Európába csak a 19. században kezdték beszállítani.</p>
                 <div>
                     <button class="btn btn-outline-success">
                         <a href="mandarin.html">Részletesen a mandarinról</a>
