--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
         <article class="row mb-5">
             <div class="col-12">
                 <h2 id="kulonleges">Különleges citrusok</h2>               
-                    Királynarancs
-                    Curacao
-                    Kumquat
-                    Tangelo
-                    Satsuma
-                    Buddha keze citrom
-                    Klementin
-                    Gyémánt cédra
-                    Pursha
-                    Bergamott                
+                    <ul>
+                        <li>Királynarancs</li>
+                        <li>Curacao</li>
+                        <li>Kumquat</li>
+                        <li>Tangelo</li>
+                        <li>Satsuma</li>
+                        <li>Buddha keze citrom</li>
+                        <li>Klementin</li>
+                        <li>Gyémánt cédra</li>
+                        <li>Pursha</li>
+                        <li>Bergamott</li>
+                    </ul>          
             </div>
         </article>
     </main>    
