--- a/mandarin.html
+++ b/mandarin.html
@@ -35,8 +35,8 @@
         <article class="row">
             <div class="col-md-7">
                 <h2>Mandarin</h2>
-                <p>A mandarin (Citrus reticulata) a citrusformák közé tartozó déligyümölcs.
-                    Dél-Kínából származik, Európába csak a 19. században kezdték beszállítani.</p>
+                <p>A mandarin (<i>Citrus reticulata</i>) a citrusformák közé tartozó déligyümölcs.
+                    <b>Dél-Kínából</b> származik, Európába csak a 19. században kezdték beszállítani.</p>
                 <p>A mandarin és a narancs hibridje a klementin</p>
                 <p>A Fülöp-szigeteken és Délkelet-Ázsiában vadon élő növény. A citrustermő vidékeken, főleg a keleti
                     országokban termesztik, bár a trópusokon is jól tenyészik.</p>
